# election-analysis

./: .coverage-report  .coverage-report-strict  .coveragerc  .gitignore  README.md  coverage_install_and_run.sh  get_latest_pyenv.sh  install_dependencies.sh  pip_setup_pyenv_run_coverage.sh  pip_setup_pyenv_run_coverage_example.sh  ps_install_poetry.ps1  ps_setup_pyenv_environment_variables.ps1  requirements.txt  run_ci.sh  run_ci_example.sh  run_tests.sh  setup.cfg
resources/: presidential-votes-by-county-2000-2016-reduced.csv  presidential-votes-by-state-1976-2016-reduced.csv
results/: baseline_county_distributions.csv  baseline_county_predictiveness.csv  baseline_state_distributions.csv  benford-distribution-2020-11-07-12-30-15.910175  run-2020-11-08-08-05-42.881674
scripts/: install_dependencies.sh
src/: BenfordAnalysis.py  ElectionResult.py  benford_analysis_service.py  election_analysis.py  election_result.py  election_result_repository.py  election_result_service.py  main.py  prediction_analysis_service.py  predictiveness_analysis_service.py
test/: test_benford_analysis_service.py  test_election_analysis.py  test_election_result.py  test_election_result_service.py  test_locality_result_service.py  test_main.py  test_main_integration.py  test_mit_integration.py  test_party_result_service.py  test_prediction_analysis_service.py  test_predictiveness_analysis_service.py
tests/: test_benford_analysis_service.py  test_benford_service.py  test_election_event_service.py  test_election_history_service.py  test_election_result_service.py  test_mit_integration.py  (+6 more)
(+52 files in other folders)
