[metadata]
name = election-analysis
version = 0.1.0
author = Drew Stern
author_email = None
description = A collection of services for doing analysis on United States election data provided by MIT.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DrewStern/election-analysis
project_urls =
    Bug Tracker = https://github.com/DrewStern/election-analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
